<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/img_register_width"
        android:layout_height="@dimen/img_register_height"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:src="@drawable/ic_transaction_password_otp_verification_code_security_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/register_check_info_text"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/register_check_info_small_text"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_register_code_text"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/reg_code_hint"
        android:maxLength="6"
        style="@style/edit_text"
        android:padding="@dimen/register_et_padding"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:inputType="number" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/send_code_label"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_register_code_text"
        app:layout_constraintStart_toStartOf="@+id/et_register_code_text"
        app:layout_constraintTop_toBottomOf="@+id/et_register_code_text" />


</androidx.constraintlayout.widget.ConstraintLayout>