<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_topbar_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_user"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/settings_name_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/photo_user"
            app:layout_constraintTop_toTopOf="@+id/photo_user"
            tools:text="@string/name_user_settings" />


        <TextView
            android:id="@+id/status_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_settings"
            android:textSize="@dimen/small_text"
            app:layout_constraintBottom_toBottomOf="@+id/photo_user"
            app:layout_constraintStart_toStartOf="@+id/settings_name_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:text="@string/settings_text_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn_change_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_topbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number"
        style="@style/settings_btn_container"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account">

        <TextView
            android:id="@+id/settings_number"
            style="@style/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_default_number" />


        <TextView
            android:id="@+id/settings_number_text_info"
            style="@style/small_text"
            android:text="@string/settings_text_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_number" />

        <View
            style="@style/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_number_text_info" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_username"
        style="@style/settings_btn_container"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number">

        <TextView
            android:id="@+id/settings_username"
            style="@style/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/default_username_text" />


        <TextView
            android:id="@+id/settings_username_text_info"
            style="@style/small_text"
            android:text="@string/username_default_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />

        <View
            style="@style/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username_text_info" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_bio"
        style="@style/settings_btn_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_username">

        <TextView
            android:id="@+id/settings_bio_text"
            style="@style/normal_text"
            android:text="@string/default_bio_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/settings_bio_text_info"
            style="@style/small_text"

            android:text="@string/default_bio_info_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio_text" />

        <View
            style="@style/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio_text_info" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_photo_change"
        android:layout_width="@dimen/settings_btn_photo_change_width"
        android:layout_height="@dimen/settings_btn_photo_change_height"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:src="@drawable/ic_fluent_camera_add_regular_icon"
        app:civ_border_color="@color/colorGrey"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/settings_topbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_topbar_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>