<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterPhoneNumberFragment">


    <TextView
        android:id="@+id/default_register_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_input_your_phone_number"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/edit_text"
        android:hint="@string/register_hint_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_register_phone_number"
        android:id="@+id/et_reg_phone_number"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:padding="@dimen/register_et_padding"
        android:textColor="@color/colorBlack"
        android:autofillHints="phone" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_reg_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>